# NoGraphicsAPI

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  NoGraphicsAPI_Impl.cpp  NoGraphicsAPI_Impl.h  README.md  format.sh  test.sh
Samples/Common/: Utilities.cpp  Utilities.h
Samples/Compute/: Compute.cpp
Samples/Graphics/: Graphics.cpp
Samples/Raytracing/: Raytracing.cpp
ci/: Dockerfile
cmake/: CompileShaders.cmake
docs/: multithreading.md
nga/: CMakeLists.txt  README.md  nga.cmake
nga/cmake/: CompileShaders.cmake  EmbedPatchDescriptors.cmake
nga/include/: NoGraphicsAPI_Impl.h
nga/src/: NoGraphicsAPI_Impl.cpp  PatchDescriptorsSpv.h
ngapi/: CMakeLists.txt  README.md  ngapi.cmake
ngapi/cmake/: CompileMetalShaders.cmake  CompileShaders.cmake  EmbedPatchDescriptors.cmake  PrependMetalComment.cmake  RewriteMetalHeaps.py
ngapi/cmake/rewriter-tests/: run_tests.py
ngapi/cmake/rewriter-tests/fixtures/: Compute.metal  Multithreading.metal  Pixel.metal  SamplerBench_benchHardware.metal  SamplerBench_benchInline.metal  SamplerBench_benchManualNearest.metal  SamplerBench_benchStatic.metal  SamplerBench_benchStaticNearest.metal  TAA.metal  Tensor_add.metal  Tensor_div.metal  Tensor_dot.metal  Tensor_mT.metal  Tensor_matmul.metal  Tensor_mul.metal  Tensor_pow.metal  Tensor_sub.metal  Tensor_tanh.metal  TextPixel.metal  TextVertex.metal  Vertex.metal
ngapi/include/: NoGraphicsAPI.h  NoGraphicsAPI_Impl.h  Sampler.h
ngapi/shaders/: PatchDescriptors.slang
ngapi/src/: NoGraphicsAPI_Impl.cpp  NoGraphicsAPI_Metal.mm  PatchDescriptorsSpv.h
platform/: window.h  window_glfw.cpp  window_metal.mm  window_sdl3.cpp
samples/: README.md
samples/common/: MsdfFont.cpp  MsdfFont.h  TAA.h  TAA.slang  Text.h  TextPixel.slang  TextVertex.slang  Utilities.cpp  Utilities.h
samples/compute/: Compute.cpp  Compute.h  Compute.slang
samples/graphics/: Graphics.cpp  Graphics.h  Pixel.slang  Vertex.slang
samples/learning/: Tensor.cpp  Tensor.slang
samples/multiplegpus/: MultipleGPUs.cpp  MultipleGPUs.h
samples/multithreading/: Multithreading.cpp  Multithreading.h  Multithreading.slang
samples/raytracing/: Random.h  Raytracing.cpp  Raytracing.h  Raytracing.slang  ReSTIR.slang
samples/samplerbench/: SamplerBench.cpp  SamplerBench.h  SamplerBench.slang
shaders/: PatchDescriptors.h
src/: Config.h  NoGraphicsAPI_Impl.cpp
tests/: CMakeLists.txt  ci-run.sh  test_common.cpp  test_common.h  test_compute.cpp  test_graphics.cpp  test_raytracing.cpp
